--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -1,6 +1,7 @@
 name: Import Algosec risk
 on: workflow_dispatch
 
+
 jobs:
   import_risk:
     name: Import risk
@@ -11,4 +12,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Execute import
-        run: set
+        run: echo ${var.ALGOSEC_SERVER}
