--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Execute import
-        run: echo ${var.ALGOSEC_SERVER}
+        run: echo ${{vars.ALGOSEC_SERVER}}
