--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -12,4 +12,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Execute import
-        run: echo ${{vars.ALGOSEC_SERVER}}
+        env:
+          ALGOSEC_SERVER: ${{vars.ALGOSEC_SERVER}}
+        run: set
