--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -14,10 +14,8 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+          echo $VIRTUAL_ENV
       
-      - name: Teste
-        run: echo $VIRTUAL_ENV
-
       - name: Execute import
         env:
           ALGOSEC_SERVER: ${{ vars.ALGOSEC_SERVER }}
