--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -11,14 +11,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create and activate Python venv
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          echo $VIRTUAL_ENV
-      
-      - name: Execute import
         env:
           ALGOSEC_SERVER: ${{ vars.ALGOSEC_SERVER }}
           ALGOSEC_USERNAME: ${{ vars.ALGOSEC_USERNAME }}
           ALGOSEC_PASSWORD: ${{ secrets.ALGOSEC_PASSWORD }}
-        run: set
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          set | grep ALGOSEC_
+  
