--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -18,5 +18,6 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+          pip install -r requirements.txt
           set | grep ALGOSEC_
   
