--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 jobs:
   import_risk:
     name: Import risk
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     environment: prod
     steps:
       - name: Checkout
@@ -16,8 +16,10 @@ jobs:
           ALGOSEC_USERNAME: ${{ vars.ALGOSEC_USERNAME }}
           ALGOSEC_PASSWORD: ${{ secrets.ALGOSEC_PASSWORD }}
         run: |
-          python -m venv venv
+          python3 -m venv venv
           source venv/bin/activate
+          python3 -m pip install --upgrade pip
           pip install -r requirements.txt
-          set | grep ALGOSEC_
+          ./run.py
+          
   
