--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -2,24 +2,28 @@ name: Import Algosec risk
 on: workflow_dispatch
 
 jobs:
-  import_risk:
-    name: Import risk
-    runs-on: self-hosted
-    environment: prod
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+    import_risk:
+        name: Import risk
+        runs-on: self-hosted
+        environment: prod
+        steps:
+        - name: Checkout
+          uses: actions/checkout@v3
 
-      - name: Create and activate Python venv
-        env:
-          ALGOSEC_SERVER: ${{ vars.ALGOSEC_SERVER }}
-          ALGOSEC_USERNAME: ${{ vars.ALGOSEC_USERNAME }}
-          ALGOSEC_PASSWORD: ${{ secrets.ALGOSEC_PASSWORD }}
-        run: |
-          python3 -m venv venv
-          source venv/bin/activate
-          python3 -m pip install --upgrade pip
-          pip3 install -r requirements.txt
-          ./run.py
-          
-  
+        - name: Configure Python virtual environment ( venv )
+          run: |
+              python3 -m venv venv
+              source venv/bin/activate
+              python3 -m pip install --upgrade pip
+              pip3 install -r requirements.txt
+
+        - name: Import risk
+          env:
+              ALGOSEC_SERVER: ${{ vars.ALGOSEC_SERVER }}
+              ALGOSEC_USERNAME: ${{ vars.ALGOSEC_USERNAME }}
+              ALGOSEC_PASSWORD: ${{ secrets.ALGOSEC_PASSWORD }}
+          run: |
+              source venv/bin/activate
+              ./run.py
+            
+    
