--- a/.github/workflows/import_risk.yml
+++ b/.github/workflows/import_risk.yml
@@ -27,5 +27,4 @@ jobs:
           ALGOSEC_PASSWORD: ${{ secrets.ALGOSEC_PASSWORD }}
         run: |
           source venv/bin/activate
-          #./import_risk.py
-          echo "EXECUTA!"
+          ./import_risk.py
